# unsound-juce

./: .gitignore  CMakeLists.txt  README.md  TODO.md  animated_logo_todo.md  wham_todos.md
Source/: Main.cpp  StartupDialog.cpp  StartupDialog.h
Source/Engine/: LooperReadHead.cpp  LooperReadHead.h  LooperTrackEngine.cpp  LooperTrackEngine.h  LooperWriteHead.cpp  LooperWriteHead.h  MultiTrackLooperEngine.cpp  MultiTrackLooperEngine.h  OutputBus.h  TapeLoop.cpp  TapeLoop.h  VampNetTrackEngine.cpp  VampNetTrackEngine.h
Source/Frontends/Basic/: LooperTrack.cpp  LooperTrack.h  MainComponent.cpp  MainComponent.h
Source/Frontends/Shared/: DualWaveformDisplay.cpp  DualWaveformDisplay.h  GitInfo.cpp  GitInfo.h  GitVersion.h.in  GradioUtilities.cpp  GradioUtilities.h  LevelControl.cpp  LevelControl.h  MidiLearnComponent.h  MidiLearnManager.cpp  MidiLearnManager.h  OutputSelector.cpp  OutputSelector.h  ParameterKnobs.cpp  ParameterKnobs.h  SettingsDialog.h  TransportControls.cpp  TransportControls.h  WaveformDisplay.cpp  WaveformDisplay.h
Source/Frontends/Text2Sound/: LooperTrack.cpp  LooperTrack.h  MainComponent.cpp  MainComponent.h
Source/Frontends/VampNet/: ClickSynth.h  LooperTrack.cpp  LooperTrack.h  MainComponent.cpp  MainComponent.h  Sampler.cpp  Sampler.h  SessionConfig.cpp  SessionConfig.h
Source/Frontends/WhAM/: ClickSynth.cpp  LooperTrack.cpp  LooperTrack.h  MainComponent.cpp  MainComponent.h  ModelParamsPopup.cpp  ModelParamsPopup.h  Sampler.cpp  SessionConfig.cpp  SessionConfig.h  SettingsComponent.h  Synths.cpp  Synths.h  TokenVisualizer.cpp  TokenVisualizer.h
Source/GradioClient/: GradioClient.cpp  GradioClient.h
Source/Panners/: Panner2DComponent.cpp  Panner2DComponent.h  PanningUtils.cpp  PanningUtils.h
apps/basic/: LooperTrack.h
apps/embeddingsampler/: SamplerTrack.cpp  SamplerTrack.h
apps/text2sound/: CMakeLists.txt  LooperTrack.cpp  LooperTrack.h  Main.cpp  MainComponent.cpp  MainComponent.h  VizWindow.cpp  VizWindow.h
apps/text2sound4all/: LooperTrack.cpp  LooperTrack.h
libs/flowerjuce/: CMakeLists.txt
libs/flowerjuce/Components/: SinksWindow.h
libs/flowerjuce/LayerCakeEngine/: GrainVoice.h
libs/flowerjuce/LooperEngine/: LooperTrackEngine.h
libs/flowerjuce/Panners/Components/: Panner2DComponent.cpp  Panner2DComponent.h
libs/flowerjuce/Panners/DSP/: PathPlayer.cpp  PathPlayer.h  StereoPanner2D.cpp  StereoPanner2D.h
tests/: CMakeLists.txt  PannerTests.cpp  PathPlayerTests.cpp  TestUtils.h
tests/scripts/: plot_panner_tests.py
